# thallium-tutorial-exercises

./: CMakeLists.txt  README.md  spack.yaml
src/: CMakeLists.txt  client.cpp  phonebook.hpp  server.cpp  types.hpp
